# visual-regression-platform-poc

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.js  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml  lint.yml
.husky/: pre-commit
services/diff-service/: Cargo.toml  Dockerfile
services/diff-service/src/: main.rs
services/frontend/: Dockerfile  package-lock.json
services/orchestrator/: Cargo.toml  Dockerfile
services/orchestrator/src/: main.rs
services/report-service/: Cargo.toml  Dockerfile
services/report-service/src/: main.rs
services/worker/: Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
